# opennem

./: .cursorrules  .dockerignore  .editorconfig  .env.example  .envrc.example  .flake8  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .pylintrc  .worktreeinclude  CLAUDE.md  Dockerfile  Dockerfile.scrapyd  INSTALL.md  LICENSE  Makefile  README.md  alembic.ini  apvi.json  balancing_summary.csv  build-scrapyd.sh  build_docker.sh  codecov.yml  create_setup.py  docker-compose.yml  docker-entrypoint.sh  facility_diff.py  facility_map.qgz  facility_registry.json  import_all_npi_facilities.py  init.sh  make-release.sh  mypy.ini  poetry.toml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  (+9 more)
.github/workflows/: auto-promote.yml  claude-code-review.yml  coverage.yml  dockerimage.yml  docs-deploy.yml  docs-preview.yml  tests.yml
.ipython/profile_default/: ipython_config.py
.jupyter/: jupyter_notebook_config.original.py  jupyter_notebook_config.py  migrated
data/: diff_report.md  mms.json  mms_duid_station_map.json  nem_gi.json  opennem.json  registry.json  rel.json  stations.csv  stations.geojson  stations.json  wikidata-parsed.json
data/facility_diff/: au_facilities.json  facilities_current.csv  facilities_v3.csv
dms_daemon/: __init__.py  live.py  market_notice_reader.py  nemweb_causer_pays.py  nemweb_reader.py  orm.py  settings.py
docs/: .gitignore  .mintignore  .tanglyignore  README.md  branching-strategy.md  changelog.mdx  community.mdx  database_schema.md  docs.json  introduction.mdx  mint.json  nemweb_catalog.json  nemweb_complete_catalog.md  nemweb_data_structure.md  openapi.json  package.json  quickstart.mdx  sync_openapi.sh  wrangler.toml
docs/api/: overview.mdx  time-buckets.mdx
docs/api-reference/: data-limits.mdx  introduction.mdx  metrics.mdx  openapi.json  overview.mdx  response.mdx
docs/backend/: catchup.mdx  cli.mdx  clickhouse.mdx  continuous_aggregates.mdx  crawlers.mdx  data-gap-tracking.mdx  database_schema.mdx  gettingstarted.mdx  introduction.mdx  wem_client.mdx
docs/contribute/: overview.mdx
docs/guides/: batteries.mdx  capacity.mdx  curtailment.mdx  demand.mdx  emissions.mdx  energy.mdx  facilities.mdx  fueltechs.mdx  interconnectors.mdx  networks.mdx  pollution.mdx  power.mdx  price.mdx  prices.mdx  renewables.mdx  weather.mdx
docs/howto/: getting-started.mdx
docs/migrate/: v4.1.mdx
docs/platform/: introduction.mdx  typescript.mdx
docs/schema/: field_types.md
docs/sdk/: configuration.mdx  overview.mdx
e2e/: .gitignore  run.py
infra/container/: Dockerfile  docker-entrypoint.sh
infra/database/: Dockerfile  docker-entrypoint.sh
infra/dev/: docker-compose.yml
infra/prod/: docker-compose.yml
infra/prometheus/: prometheus.yml
infra/proxy/: Dockerfile
infra/staging/: docker-compose.yml
infra/terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf  versions.tf
notebooks/: VWP Compare.ipynb  check_all_regions_query.ipynb  check_daily_bucket_edges.ipynb  compare_energy.ipynb  compare_price.ipynb  flow_emissions.ipynb  mms_latest.csv  notebook_init.py  solar_rooftop_compare.ipynb
notebooks/data/: vic1_jan_vwp.csv
notebooks/flows/: index.html
opennem/: __init__.py  cli.py  config-example.yml  crawl.py  live.py  market_notice_reader.py  nemweb_causer_pays.py  nemweb_reader.py  nemweb_requests.py  orm.py  settings_schema.py
opennem/agent/: reactor.py  tasks.py
opennem/aggregates/: all.py  facility_daily.py  facility_interval.py  market_summary.py  network_demand.py  network_flows.py  network_flows_v3.py  network_flows_v4.py  unit_intervals.py  utils.py
opennem/ai/: market_notice_parser.py  openai.py
opennem/api/: __init__.py  app.py  code_samples.py  controllers.py  exceptions.py  exporter.py  intervals.py  keys.py  locations.py  maintenance_app.py  openapi_extra.py  queries.py  schema.py  security.py  stations.py  stats.py  throttle.py  time.py  timeseries.py  utils.py
opennem/client/: __init__.py
opennem/clients/: aemo_metadata.py  apvi.py  bluesky.py  bom.py  cfimage.py  clerk.py  github.py  linkedin.py  mailgun.py  mms.py  slack.py  slack_app.py  twitter.py  unkey.py  wem.py  wemde.py  willy.py
opennem/cms/: client.py  comparison.py  fieldmap.py  import.py  importer.py  queries.py  updates.py  utils.py
opennem/controllers/: apvi.py  bom.py  capacity_history.py  demand.py  energy.py  export.py  flows.py  nem.py  npi.py  wem.py  (+4 more)
scripts/: _functions.sh  aemo_rooftop_backfill.csv  apvi_backfill.py  apvi_data.py  benchmark_aemo_and_opennem.py  bom_archive.py  bom_import.py  bom_request.sh  bom_stations.py  build_images.sh  catchup.py  crawl_all.py  crawl_catchup.sh  db_benchmark.py  db_refresh.py  deploy_latest.sh  energy_diffs.py  fill_energy_gaps.py  fixtures.py  flows.py  flows_multiprocess.py  init.py  init.sh  init_testing.sh  interconnector_data.py  link_venv.sh  load_historic_dispatch_regionsum.py  make_dev.sh  make_release.sh  mirror-url.sh  mirror_mms.sh  mms_import.py  nemweb_import.py  notebook_venv.sh  pg_locks.py  post_feedback_to_slack.py  price_disc.py  proxy.py  refresh_fixtures.sh  rooftop_backfill.py  (+30 more)
tests/: benchmark_dates.py  benchmark_dates_optimized.py  benchmark_facility_scada_generate.py  benchmark_mms_parser.py  conftest.py  test_aemo_5min_parser.py  test_api_auth_utils.py  test_base25.py  test_bom_utils.py  test_capacity_cleaner.py  test_case_styles.py  test_cms_retry.py  test_compat_energy.py  test_compat_id_translate.py  test_core_flows.py  test_dates.py  test_dates_optimized.py  test_dates_utils.py  test_demand_query.py  test_dirlisting_parser.py  test_dispatch_types.py  test_energy.py  test_energy_compat.py  test_export_prioritytype.py  test_exporter_historic.py  test_facility_duid_map.py  test_facility_output.py  test_flow_solver_graph.py  test_fueltech_mapv2.py  test_fueltechs.py  test_importer_flows.py  test_intervals.py  test_listfuncs.py  test_market_summary_price_locf.py  test_net_flow_emissions.py  test_network_region_bom_station.py  test_normalize_duid.py  test_normalizers_strings.py  test_numbers.py  test_opennem.py  (+30 more)
(+1030 files in other folders)
