[project]
name = "opennem-backend"
version = "4.0.0-dev0"
description = "OpenElectricity (OpenNEM) Australian Energy Data Platform"
license = "MIT"
keywords = ["openelectricity", "opennem", "analysis", "australia", "energy"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering"
]
authors = [
    {name = "Dylan McConnell", email = "dylan.mcconnell@unimelb.edu.au"},
    {name = "Nik Cubrilovic", email = "git@nikcub.me"},
]
requires-python = "<4.0,>=3.12"

dependencies = [
    "requests<3.0.0,>=2.23.0",
    "sentry-sdk[asyncpg,fastapi,httpx,sqlalchemy]>=2.1.1,<3.0.0",
    "pydantic[email]<3.0.0,>=2.6.4",
    "alembic<2.0.0,>=1.6.2",
    "geojson<4.0.0,>=3.1.0",
    "fastapi<1.0.0,>=0.110.0",
    "shapely<3.0.0,>=2.0.2",
    "validators<1.0.0,>=0.18.1",
    "python-magic<1.0.0,>=0.4.18",
    "cachetools<6.0.0,>=5.0.0",
    "xlrd<3.0.0,>=2.0.1",
    "datetime-truncate<2.0.0,>=1.1.1",
    "datedelta<2.0,>=1.3",
    "pandas<3.0.0,>=2.2.0",
    "osm2geojson<1.0.0,>=0.2.0",
    "Mako<2.0.0,>=1.1.4",
    "SQLAlchemy[asyncio]<3.0.0,>=2.0.32",
    "rich<14.0.0,>=13.7.0",
    "GeoAlchemy2<1.0.0,>=0.14.4",
    "boto3<2.0.0,>=1.23.7",
    "seaborn<1.0.0,>=0.13.2",
    "fastapi-cache2[redis]<1.0.0,>=0.2.1",
    "httpx[http2,socks]<1.0.0,>=0.27.0",
    "uvicorn<1.0.0,>=0.30.4",
    "gunicorn<23.0.0,>=22.0.0",
    "unkey-py>=0.7.1,<0.8.0",
    "authlib<2.0.0,>=1.2.1",
    "pydantic-geojson<1.0.0,>=0.1.1",
    "pydantic-settings<3.0.0,>=2.1.0",
    "python-multipart<1.0.0,>=0.0.6",
    "fastapi-versionizer<5.0.0,>=4.0.1",
    "datetype<2025.0.0,>=2024.2.8",
    "asyncpg<1.0.0,>=0.29.0",
    "deprecation<3.0.0,>=2.1.0",
    "asgiref<4.0.0,>=3.8.1",
    "chardet<6.0.0,>=5.2.0",
    "tqdm<5.0.0,>=4.66.5",
    "logfire[asyncpg,fastapi,httpx,redis,requests,sqlalchemy]>=0.52.0,<3.0.0",
    "aioboto3<14.0.0,>=13.1.1",
    "arq<1.0.0,>=0.26.1",
    "asyncclick<9.0.0.0,>=8.1.7.2",
    "openai<2.0.0,>=1.43.1",
    "instructor<2.0.0,>=1.4.0",
    "sanity @ git+https://github.com/OmniPro-Group/sanity-python.git",
    "portabletext-html<2.0.0,>=1.1.3",
    "tenacity>=9.0.0",
    "psycopg[binary]>=3.2.3",
    "polars>=1.14.0",
]

[tool.uv]
dev-dependencies = [
    "python-dotenv<2.0.0,>=1.0.0",
    "rope<2.0.0,>=1.0.0",
    "pytest<9.0.0,>=8.0.0",
    "pytest-watch<5.0.0,>=4.2.0",
    "mdutils<2.0.0,>=1.2.2",
    "pytest-benchmark<5.0.0,>=4.0.0",
    "pdbpp<1.0.0,>=0.10.2",
    "pytest-sugar<2.0.0,>=1.0.0",
    "tox<5.0.0,>=4.2.6",
    "types-requests<3.0.0,>=2.25.2",
    "betamax<1.0.0,>=0.9.0",
    "coverage<8.0.0,>=7.1.0",
    "pytest-cov<6.0.0,>=5.0.0",
    "types-cachetools<6.0.0,>=5.0.0",
    "freezegun<2.0.0,>=1.2.2",
    "pyright<2.0.0,>=1.1.299",
    "ruff<1.0.0,>=0.6.5",
    "pytest-asyncio<1.0.0,>=0.24.0",
    "hatch<2.0.0,>=1.7.0",
    "types-redis<5.0.0.0,>=4.6.0.11",
    "requests-cache<2.0.0,>=1.1.1",
    "hypothesis<7.0.0,>=6.108.5",
    "psycopg2-binary>=2.9.10",
    "bump-my-version>=0.28.1",
]

[project.scripts]
opennem = "opennem.cli:main"
api = "bin.run_server:run_server"
worker = "opennem.tasks.app:main"

[tool.rooster]
version_files = ["opennem/__init__.py", "README.md"]

[tool.ruff]
target-version = "py312"
line-length = 130
exclude = [
  "var",
  "opennem/db/migrations",
  "build",
  "notebooks",
  ".ipython",
  ".jupyter",
]

[tool.ruff.lint]
select = [
  "F",   # flake8
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "C",   # flake8-comprehensions
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "T",   # mypy
#  "FAST", # fastapi
#  "PERF", # perflint
#  "FURB", # refurb
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "T201",  # ignore print
    "T203",  # ignore pprint
    "C901",  # ignore function too complex
    "E721",  # igmpre unsafe type comparison
]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = 100

[tool.pyright]
include = ["opennem/**/*.py"]
exclude = ["opennem/db/migrations/env.py"]
python_version = "3.12"
reportMissingImports = "error"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
log_cli = true
log_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.bumpversion]
current_version = "4.0.0-dev3"
parse = """(?x)
    (?P<major>0|[1-9]\\d*)\\.
    (?P<minor>0|[1-9]\\d*)\\.
    (?P<patch>0|[1-9]\\d*)
    (?:
        -                             # dash separator for pre-release section
        (?P<pre_l>[a-zA-Z-]+)         # pre-release label
        (?P<pre_n>0|[1-9]\\d*)        # pre-release version number
    )?                                # pre-release section is optional
"""
serialize = [
    "{major}.{minor}.{patch}-{pre_l}{pre_n}",
    "{major}.{minor}.{patch}",
]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = true
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[tool.bumpversion.parts.pre_l]
values = ["dev", "rc", "final"]
optional_value = "final"
